--- a/index.html
+++ b/index.html
@@ -7,9 +7,14 @@
   <link href="css/modules.css" rel="stylesheet">
 </head>
 <body>
+
+  <ul class="skip-links">
+    <li><a href="#main">Jump to main content</a></li>
+    <li><a href="#nav">Jump to navigation</a></li>
+  </ul>
   <header role="banner">
     <h1>Pangolin</h1>
-    <nav role="navigation">
+    <nav role="navigation" id="nav" tabindex="0">
       <ul>
         <li><a href="description">Description</a></li>
         <li><a href="behaviour">Behaviour</a></li>
@@ -18,17 +23,38 @@
     </nav>
   </header>
 
-  <main role="main">
+  <main role="main" id="main" tabindex="0">
+    <img src="images/images/map.jpg" alt="" aria-details="countries">
     <section>
       <h2 id="description" tabindex="0">Description</h2>
+      <div id="countries">
+        <h3>Some countries whre pangolins</h3>
+        <ol>
+          <li>Botswana</li>
+          <li>Kenya</li>
+          <li>Mozambique</li>
+          <li>Namibia</li>
+          <li>South Africa</li>
+          <li>Tanzania</li>
+          <li>Uganda</li>
+          <li>Zambia</li>
+          <li>Zimbabwe</li>
+        </ol>
+      </div>
     </section>
+
+    <div id="countries">
 
     <section>
       <h2 id="behaviour" tabindex="0">Behaviour</h2>
+      <a href="https//en.wikipedia.org/wiki/Pangolin#Behaviour" aria-label="Read more about Pangolin behaviour">Read more</a>
+
+      "></a>
     </section>
 
     <section>
       <h2 id="conservation" tabindex="0">Conservation</h2>
+      <a href="https//en.wikipedia.org/wiki/Pangolin#Conservation" aria-label="Read more about Pangolin conservation">Read more</a>
     </section>
   </main>
 
