Fix some errors

--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@
     <img src="images/images/map.jpg" alt="" aria-details="countries">
     <section>
       <h2 id="description" tabindex="0">Description</h2>
+
       <div id="countries">
-        <h3>Some countries whre pangolins</h3>
+        <h3>Some countries where pangolins are found</h3>
         <ol>
           <li>Botswana</li>
           <li>Kenya</li>
@@ -43,23 +44,20 @@
       </div>
     </section>
 
-    <div id="countries">
-
     <section>
       <h2 id="behaviour" tabindex="0">Behaviour</h2>
-      <a href="https//en.wikipedia.org/wiki/Pangolin#Behaviour" aria-label="Read more about Pangolin behaviour">Read more</a>
-
-      "></a>
+      <a href="https://en.wikipedia.org/wiki/Pangolin#Behavior" aria-label="Read more about Pangolin behaviour">Read more</a>
     </section>
 
     <section>
       <h2 id="conservation" tabindex="0">Conservation</h2>
-      <a href="https//en.wikipedia.org/wiki/Pangolin#Conservation" aria-label="Read more about Pangolin conservation">Read more</a>
+      <a href="https://en.wikipedia.org/wiki/Pangolin#Conservation" aria-label="Read more about Pangolin conservation">Read more</a>
     </section>
   </main>
 
   <footer role="contentinfo">
     <small>© 1821 Pangolin</small>
+  </footer>
 
 </body>
 </html>
